# nimbus-store

./: Dockerfile  Pipfile  README.md  migrate.py  pyproject.toml  start.py
db/sqlite/migrations/: 0000-init.dn.sql  0000-init.up.sql
lib/api/: __init__.py  api_happy_test.py  api_test.py  buckets.py  files.py  local_files.py  resource.py  util.py
lib/models/: file.py  model.py
models/: bucket.py  local_file.py  model.py
src/nimbus_store/: buckets.py  files.py  local_files.py  resource.py  util.py
src/nimbus_store/models/: local_file.py  model.py
src/nimbus_store/test/: __init__.py
