[tool.poetry]
name = "nimbus-store"
version = "0.1.0"
description = "Nimbus Cloud Storage Service"
authors = ["Zach Bullough <zach@ordermygear.com>"]

[tool.poetry.dependencies]
python = "^3.6"
falcon = "^2.0.0"
nimbus_migrate = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=1.00"]
build-backend = "poetry.masonry.api"